Remove resources.utilization
