# paasta_tools/api/api.py
@@ -137,7 +137,6 @@ def make_app(global_config=None):
     )
     config.include(profiling)
 
-    config.add_route("resources.utilization", "/v1/resources/utilization")
     config.add_route(
         "service.instance.status", "/v1/services/{service}/{instance}/status"
     )
